--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                       <option >name</option>
                       <option >price</option>   
                   </select>
-                  <input type="checkbox" ng-model="rev">
+                  <input type="checkbox" ng-model="rev">.
 -->
                   <button class="btn btn-primary" type="button">
                   <span class="glyphicon glyphicon-search"></span>
